--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Etch-a-Sketch!</title>
-        
+        <link rel="stylesheet" type="text/css" href="styles.css">
 
     </head>
+    <body>
+        <h1>Etch A Sketch</h1>
+        <p>This is a paragprah!</p>
+        <div id="divContainer">
+
+        </div>
+    </body>
+    <script src="script.js"></script>
 </html>
