Added new mouseover event, instead of css hover. Now, when you hover over a box, it will permanently change color because of the class added to the selected div. In addition, I created a new button, the Clear button. When clicked, it will return the canvass to the original state.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <h1>Etch A Sketch</h1>
         <p>This is a paragprah!</p>
+        <button class="clear">Clear</button>
         <div id="divContainer">
 
         </div>
