Fixed resizing bug. Now, the grid itself has static size, and grid squares resize to fit the grid container. Also, error presents to user when picking number of squares per side Greater Than 100, or less than 0.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
     <body>
         <h1>Etch A Sketch</h1>
         <p>This is a paragprah!</p>
+        <button class="start">Click me!</button>
         <button class="clear">Clear</button>
         <div id="divContainer">
 
+        </div>
+
+
+        <div id="test">
+            <div>hey</div>
+            <div>hey</div>
+            <div>hey</div>
         </div>
     </body>
     <script src="script.js"></script>
