Tweaked website design. Centered containers. Added color, made background color of grid white.

--- a/index.html
+++ b/index.html
@@ -8,19 +8,18 @@
     </head>
     <body>
         <h1>Etch A Sketch</h1>
-        <p>This is a paragprah!</p>
-        <button class="start">Click me!</button>
-        <button class="clear">Clear</button>
-        <div id="divContainer">
-
+        <p class="welcome">Welcome to Etch-a-Sketch, the game where you can etch the sketch your heart truly desires. 
+        Please click on the Set Grid button, then pick how many squares you want on each side of the 
+        grid. To clear your grid and restart your drawing, please click the Clear button. 
+        </p>
+        
+        <div id="gameContainer">
+            <button class="start">Set Grid</button>
+            <div id="divContainer">
+            </div>
+            <button class="clear">Clear</button>
         </div>
-
-
-        <div id="test">
-            <div>hey</div>
-            <div>hey</div>
-            <div>hey</div>
-        </div>
+        
     </body>
     <script src="script.js"></script>
 </html>
